# GitHub-Repository-Manager

./: .env.example  .gitignore  README.md  git-bulk-private.py  github_automation.py  last_startup.txt  pyproject.toml
cli/: __init__.py  commands.py  interactive.py
core/: __init__.py  activity_generator.py  file_manager.py  github_api.py  logger.py  rate_limiter.py  validators.py
data/: follow_list.txt  seehiong_followers.txt  seehiong_following.txt  unfollow_list.txt
git-master-resp/: README.md  auto_commit.py  index.md  last_startup.txt
