[project]
name = "Github-Repository-Manager"
version = "1.0.0"
description = "Command-line tool for managing GitHub repository visibility and settings in bulk operations"
license = {text = "MIT"}
authors = [
    {name = "RafalW3bCraft", email = "thewhitefalcon13@proton.me"}
]
keywords = ["github", "repository", "management", "visibility", "bulk-operations"]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "colorama>=0.4.6",
    "cryptography>=45.0.6",
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
